--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,11 @@
   height: 40vmin;
   pointer-events: none;
 }
-
+h1{
+  font-family: 'bigelow rules';
+  font-size: 72px;
+  color:#0accac4;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
